#204 Fixed translation. Fixed missed tags. Fixed i18n domain

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -20,7 +20,7 @@ arguments = ('coverage', 'coverage/report')
 [i18n]
 recipe = z3c.recipe.i18n:i18n
 packages = zojax.content.workflow
-domain = zojax.content.workfloe
+domain = zojax.content.workflow
 output = ${buildout:directory}/src/zojax/content/workflow/locales
 eggs = zojax.content.workflow [test]
 zcml =
